--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,13 @@
 /* --------------------------------------------
-
+	
 	main.css : main style file
 	Project : Empathy
-	Author : pixelwars
-
+	Author : pixelwars 
+	
 	---
-
+	
 	CONTEXT:
-
+	
 	1. BASE - @base
 		1.1 ELEMENTS
 		1.2 FONTS
@@ -17,13 +17,13 @@
 	4. LAYOUT - @layout
 	5. MODULES - @modules
 	6. THEME - @theme
-
+	
    -------------------------------------------- */
 
 /*  --------------------------------------------
 
 	1. BASE (@base) - base html elements
-
+	
     -------------------------------------------- */
 
 /* ----- 1.1 ELEMENTS ----- */
@@ -174,15 +174,17 @@ p {
 }
 /* blockquote  */
 blockquote {
-  margin: 0 auto;
-  padding: 1em;
-  border-left: 5px solid #999;
+  position: absolute;
+  margin: 1.6em 0;
+  padding: 0 0.8em;
+  text-align: center;
+  font-size: 1.4em;
+  line-height: 1.2;
+  font-weight: bold;
+  letter-spacing: -1px;
 }
 blockquote p {
-  color: #555;
-  font-size: 12pt;
-  line-height: 1.4;
-  font-style: italic;
+  line-height: 100%;
 }
 blockquote cite {
   display: block;
@@ -192,7 +194,7 @@ blockquote cite {
   font-style: normal;
   font-weight: 400;
   color: #b7c6c9;
-  letter-spacing: 5;
+  letter-spacing: 0;
 }
 hr {
   padding: 0.6em 0 1em 0;
@@ -272,7 +274,7 @@ dd {
 /*  --------------------------------------------
 
 	2. FORMS (@forms) - form elements
-
+	
     -------------------------------------------- */
 form p {
   position: relative;
@@ -493,7 +495,7 @@ label.error:after {
 /*  --------------------------------------------
 
 	3. COMMON (@common) - common and helper classes
-
+	
     -------------------------------------------- */
 .cf:before,
 .cf:after,
@@ -570,7 +572,7 @@ textarea,
 /*  --------------------------------------------
 
 	4. LAYOUT (@layout) : layout styles
-
+	
     -------------------------------------------- */
 .site,
 .site-main {
@@ -586,7 +588,6 @@ textarea,
   background-size: cover;
   background-position: center center;
   background-color: #fff;
-  margin-left: 0;
 }
 .single-page-layout body {
   background: #fff;
@@ -679,7 +680,7 @@ html {
 .content {
   position: relative;
   z-index: 10;
-  text-align: left;
+  text-align: -webkit-center;
   overflow: auto;
 }
 .content > div {
@@ -1088,7 +1089,7 @@ section#contact  {
 /*  --------------------------------------------
 
 	5. MODULES @modules : reusable styles
-
+	
     -------------------------------------------- */
 
 /* PAGE TITLE */
@@ -1252,7 +1253,6 @@ h2 i:before {
   margin: 0;
   font-size: 10px;
 }
-
 .row [class^="col-"]:nth-child(3n) .process:after {
   display: none;
 }
@@ -1414,9 +1414,8 @@ h2 i:before {
 
 /* SKILLS */
 .skill-unit {
-  padding-bottom: .6em;
-  padding-right: 10%;
-  padding-left: 10%;
+  padding-bottom: 1.1em;
+  padding-right: 32px;
 }
 .skill-unit h4 {
   margin: 0 0 4px 0;
@@ -1893,10 +1892,10 @@ h2 i:before {
   opacity: 0;
   filter: alpha(opacity = 0);
   position: absolute;
-  width: 120%;
-  height: 114%;
+  width: 100%;
+  height: 100%;
   top: 0;
-  left: -20px;
+  left: 0;
   bottom: 0;
   right: 0;
   text-align: center;
@@ -6977,7 +6976,7 @@ a.more-link:hover {
 /*  --------------------------------------------
 
 	6. THEME (@theme) - customize colors etc...
-
+	
     -------------------------------------------- */
 body {
   color: #345;
