--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,13 @@
 /* --------------------------------------------
-	
+
 	main.css : main style file
 	Project : Empathy
-	Author : pixelwars 
-	
+	Author : pixelwars
+
 	---
-	
+
 	CONTEXT:
-	
+
 	1. BASE - @base
 		1.1 ELEMENTS
 		1.2 FONTS
@@ -17,13 +17,13 @@
 	4. LAYOUT - @layout
 	5. MODULES - @modules
 	6. THEME - @theme
-	
+
    -------------------------------------------- */
 
 /*  --------------------------------------------
 
 	1. BASE (@base) - base html elements
-	
+
     -------------------------------------------- */
 
 /* ----- 1.1 ELEMENTS ----- */
@@ -69,7 +69,7 @@ ul {
   list-style: square;
 }
 img {
-  max-width: 100%;
+  max-width: 112%;
   height: auto;
 }
 
@@ -174,17 +174,15 @@ p {
 }
 /* blockquote  */
 blockquote {
-  position: absolute;
-  margin: 1.6em 0;
-  padding: 0 0.8em;
-  text-align: center;
-  font-size: 1.4em;
-  line-height: 1.2;
-  font-weight: bold;
-  letter-spacing: -1px;
+  margin: 0 auto;
+  padding: 1em;
+  border-left: 5px solid #999;
 }
 blockquote p {
-  line-height: 100%;
+  color: #555;
+  font-size: 12pt;
+  line-height: 1.4;
+  font-style: italic;
 }
 blockquote cite {
   display: block;
@@ -194,7 +192,7 @@ blockquote cite {
   font-style: normal;
   font-weight: 400;
   color: #b7c6c9;
-  letter-spacing: 0;
+  letter-spacing: 5;
 }
 hr {
   padding: 0.6em 0 1em 0;
@@ -274,7 +272,7 @@ dd {
 /*  --------------------------------------------
 
 	2. FORMS (@forms) - form elements
-	
+
     -------------------------------------------- */
 form p {
   position: relative;
@@ -495,7 +493,7 @@ label.error:after {
 /*  --------------------------------------------
 
 	3. COMMON (@common) - common and helper classes
-	
+
     -------------------------------------------- */
 .cf:before,
 .cf:after,
@@ -572,7 +570,7 @@ textarea,
 /*  --------------------------------------------
 
 	4. LAYOUT (@layout) : layout styles
-	
+
     -------------------------------------------- */
 .site,
 .site-main {
@@ -588,6 +586,7 @@ textarea,
   background-size: cover;
   background-position: center center;
   background-color: #fff;
+  margin-left: 0;
 }
 .single-page-layout body {
   background: #fff;
@@ -680,7 +679,7 @@ html {
 .content {
   position: relative;
   z-index: 10;
-  text-align: -webkit-center;
+  text-align: left;
   overflow: auto;
 }
 .content > div {
@@ -1089,7 +1088,7 @@ section#contact  {
 /*  --------------------------------------------
 
 	5. MODULES @modules : reusable styles
-	
+
     -------------------------------------------- */
 
 /* PAGE TITLE */
@@ -1232,6 +1231,11 @@ h2 i:before {
   color: #345;
   background: #fff;
 }
+.process:hover {
+  color: #fff;
+  background: #345;
+  transition: transform .2s;
+}
 .process:after {
   content: "";
   position: absolute;
@@ -1253,6 +1257,7 @@ h2 i:before {
   margin: 0;
   font-size: 10px;
 }
+
 .row [class^="col-"]:nth-child(3n) .process:after {
   display: none;
 }
@@ -1414,8 +1419,9 @@ h2 i:before {
 
 /* SKILLS */
 .skill-unit {
-  padding-bottom: 1.1em;
-  padding-right: 32px;
+  padding-bottom: .6em;
+  padding-right: 10%;
+  padding-left: 10%;
 }
 .skill-unit h4 {
   margin: 0 0 4px 0;
@@ -1892,10 +1898,10 @@ h2 i:before {
   opacity: 0;
   filter: alpha(opacity = 0);
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 120%;
+  height: 114%;
   top: 0;
-  left: 0;
+  left: -20px;
   bottom: 0;
   right: 0;
   text-align: center;
@@ -6976,7 +6982,7 @@ a.more-link:hover {
 /*  --------------------------------------------
 
 	6. THEME (@theme) - customize colors etc...
-	
+
     -------------------------------------------- */
 body {
   color: #345;
